working pagination, but still with bug (last page not showing up)

--- a/src/webapp/src/components/stylesheet.css
+++ b/src/webapp/src/components/stylesheet.css
@@ -1,6 +1,6 @@
-.pf-c-page__sidebar-body {
+/* .pf-c-page__sidebar-body {
   margin-bottom: 154%;
-}
+} */
 
 #page {
   background-color: white;
